--- a/app/landing/template.hbs
+++ b/app/landing/template.hbs
@@ -23,7 +23,7 @@
 	  <div class="right_info">
 	    <h1>Simply the quickest and easiest way to find and book a <span>babysitter</span>.</h1>
 	    <div class="facebook_signup">
-		  <p><a href='javascript:;' class="facebook_signup_btn">Sign up with Facebook</a></p>
+		  <p><a {{action 'facebookSignup'}} class="facebook_signup_btn">Sign up with Facebook</a></p>
 		  <span class="fb_privacy_message">
             This helps us find your friends on Sitterfied. <br />
             We will <em>never</em>  share or post your information.
