--- a/app/templates/components/login-modal.hbs
+++ b/app/templates/components/login-modal.hbs
@@ -5,7 +5,7 @@
       <img src="/assets/img/logo2.png" alt="Sitterfied" class="logo" />
     </p>
 	<p>
-      <a href="#" class="facebook_signup_btn">
+      <a {{action "facebookLogin"}} class="facebook_signup_btn">
         <img src="/assets/img/facebook_login.png" alt="" />
       </a>
     </p>
