--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -266,7 +266,7 @@ input[type="radio"]:checked + label:before {background:url(/assets/img/check.png
 .form_style textarea:hover, .form_style textarea:focus {border-color:#3ae4f8;box-shadow:#e9e9e9 5px 3px 5px 0 inset, #3ae4f8 0 0 5px 1px;color:#616161;}
 .form_style p > input.error_field, .form_style p > textarea.error_field, .form_style p.error_field > input, .form_style p.error_field > input:hover, .form_style p.error_field > input:focus {border-color: #d27097;box-shadow: #e9e9e9 5px 3px 5px 0 inset, #d27097 0 0 5px 1px; }
 .back-to-top {position: fixed;bottom: 15px;right: 20px;background: url(/assets/img/arrows.png) left top no-repeat; width: 25px;height: 23px;}
-.back-to-top a {text-indent: -9999px;display: block;}
+.back-to-top span a {text-indent: -9999px;display: block;}
 .back-to-top:hover {background:url(/assets/img/arrows.png) left -23px no-repeat; }
 
 /* Alerts */
