--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,10 +8,14 @@
 
 // Everything else
 @import "_helpers";
+@import "_landing";
 @import "_liquid-modal";
 @import "_modal";
 
 // Fancybox (modal) styles
 @import "_fancybox";
+
+// Select2 styles
+@import "_select2";
 
 @import "style.css";
