--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -169,7 +169,7 @@ margin-left: 10px;
 	font-weight: bold;
 }
 
-html {min-width:960px;}a
+html {min-width:960px;}
 body {height:100%;font:14px 'ProximaNova', Arial, Tahoma;color:#616161;background:#edeff2;}
 div, html, body, p, ul, ol, li, a, form, img, table, td, h1, h2, h3, h4, h5, h6, blockquote, header, section, footer, aside, nav, article, figure, figcaption {margin:0;padding:0;}
 header, section, footer, aside, nav, article, figure, figcaption {display: block;}
@@ -258,8 +258,7 @@ input[type="radio"]:checked + label:before {background:url(/assets/img/check.png
 .form_style select {width:120px;}
 .form_style select[multiple] {width:230px;}
 .form_style .select2-container {margin-right:8px; vertical-align: top;}
-.form_style p  > .select2-container {min-width: 60px;
-                                                   margin-right: 8px;}
+.form_style p  > .select2-container {min-width: 90px; margin-right: 8px;}
 .form_style select.extra-small {width: 70px;}
 .form_style select.small {width:105px;}
 .form_style textarea {width:500px;height:115px;padding:10px 20px;border:1px solid #d7d7d7;box-shadow:#e9e9e9 4px 2px 4px 0 inset;border-radius:4px;font:17px 'ProximaNova';color:#616161;background:#fff;}
